# knn_query_point_placement

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  testing.ipynb  testing_2.ipynb
environments/: knn_query_point_placement.yaml
knn_query_point_placement/: knn_plotting.py  readme_images.py  setup.py
knn_query_point_placement/knn_simulation/: generate_all_neighbour_set_options.py  random_points.py
knn_query_point_placement/query_point_algorithms/: grid_search.py  nth_degree_voronoi.py  trim_extremities.py  uniform_random.py
notebooks/: generate_train_and_test_data.ipynb  reinforcement_learning_5.ipynb  testing.ipynb  voronoi_testing.ipynb
src/: plotting.py
src/query_point_algorithms/: grid_search.py  nth_degree_voronoi.py  trim_extremities.py  uniform_random.py
src/simulation/: construct_optimal_solution.py
